update post: 📝Share Fresher Interview questions for  DEVOPS role.📝

--- a/clrt6wt3j000209l29i72ad9j.md
+++ b/clrt6wt3j000209l29i72ad9j.md
@@ -45,7 +45,7 @@ tags: interview-questions, fresher, devops-journey, 2024-technology-trends
 * The basic Docker run command is:
     
     ```plaintext
-    bashCopy codedocker run [options] [image]
+    docker run [options] [image]
     ```
     
 
@@ -54,7 +54,7 @@ tags: interview-questions, fresher, devops-journey, 2024-technology-trends
 * GIT is a version control system used for tracking changes in source code. To create a sub-branch, you can use the following command:
     
     ```plaintext
-    bashCopy codegit checkout -b sub-branch-name
+    git checkout -b sub-branch-name
     ```
     
 
@@ -91,8 +91,8 @@ tags: interview-questions, fresher, devops-journey, 2024-technology-trends
     And then build the Dockerfile using:
     
     ```plaintext
-    bashCopy codedocker build --tag new-image-name:tag .
+    docker build --tag new-image-name:tag .
     ```
     
 
-[#2024goals](https://www.linkedin.com/feed/hashtag/?keywords=2024goals&highlightedUpdateUrns=urn%3Ali%3Aactivity%3A7151529377111891969) [hashtag#devops](https://www.linkedin.com/feed/hashtag/?keywords=devops&highlightedUpdateUrns=urn%3Ali%3Aactivity%3A7151529377111891969) [hashtag#interviewquestions](https://www.linkedin.com/feed/hashtag/?keywords=interviewquestions&highlightedUpdateUrns=urn%3Ali%3Aactivity%3A7151529377111891969) [hashtag#freshersjob](https://www.linkedin.com/feed/hashtag/?keywords=freshersjob&highlightedUpdateUrns=urn%3Ali%3Aactivity%3A7151529377111891969)
+[#2024goals](https://www.linkedin.com/feed/hashtag/?keywords=2024goals&highlightedUpdateUrns=urn%3Ali%3Aactivity%3A7151529377111891969)[hashtag#devops](https://www.linkedin.com/feed/hashtag/?keywords=devops&highlightedUpdateUrns=urn%3Ali%3Aactivity%3A7151529377111891969)[hashtag#interviewquestions](https://www.linkedin.com/feed/hashtag/?keywords=interviewquestions&highlightedUpdateUrns=urn%3Ali%3Aactivity%3A7151529377111891969)[hashtag#freshersjob](https://www.linkedin.com/feed/hashtag/?keywords=freshersjob&highlightedUpdateUrns=urn%3Ali%3Aactivity%3A7151529377111891969)
